--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ p {
     padding-right: 63px;
 }
 #total-output{
-    font-size:x-large;
-    padding-right:115px;
+    font-size:xx-large;
+    padding-right:88px;
 }
 button {
     padding: 10px;
